# libscapi

./: .gitignore  CMakeLists.txt  makefile
build_scripts/: INSTALL.MD
docs/: requirements.txt
include/comm/: MPCCommunication.hpp
include/cryptoInfra/: Protocol.hpp
include/infra/: Measurement.hpp
include/interactive_mid_protocols/: CommitmentScheme.hpp  CommitmentSchemeElGamal.hpp  CommitmentSchemeElGamalHash.hpp  CommitmentSchemePedersen.hpp  CommitmentSchemePedersenHash.hpp  CommitmentSchemePedersenTrapdoor.hpp  CommitmentSchemeSimpleHash.hpp  OT.hpp  OTBatch.hpp  OTExtensionLibote.hpp  OTFullSimulation.hpp  OTFullSimulationROM.hpp  OTOneSidedSimulation.hpp  OTPrivacyOnly.hpp  OTSemiHonest.hpp  OTUC.hpp  SigmaProtocol.hpp  ZeroKnowledge.hpp
include/primitives/: Mersenne.hpp  PrfOpenSSL.hpp  Prg.hpp
lib/JsonCpp/: CMakeLists.txt
lib/MaliciousOTExtension/ot/: ot-extension-malicious.cpp  ot-extension-malicious.h  xormasking.h
lib/MaliciousOTExtension/util/: cbitvector.cpp  cbitvector.h  crypto.h
lib/NTL/unix/src/: DoConfig
lib/OTExtension/ot/: ot-extension.cpp  ot-extension.h
lib/OTExtension/util/: cbitvector.cpp  cbitvector.h  typedefs.h
lib/boost_1_64_0/: project-config.jam  project-config.jam.1
lib/gmp-6.1.2/: configure
lib/libOTe/: CMakeLists.txt
lib/libOTe/cryptoTools/: CMakeLists.txt
lib/libOTe/cryptoTools/cryptoTools/: CMakeLists.txt
lib/libOTe/cryptoTools/cryptoTools/Common/: Defines.h  SSE2NEON.h
lib/libOTe/cryptoTools/frontend_cryptoTools/: CMakeLists.txt
lib/libOTe/cryptoTools/tests_cryptoTools/: CMakeLists.txt
lib/libOTe/frontend/: CMakeLists.txt
lib/libOTe/libOTe/: CMakeLists.txt
lib/libOTe/libOTe/Tools/: Tools.cpp  Tools.h
lib/libOTe/libOTe/TwoChooseOne/: IknpDotExtReceiver.cpp  KosDotExtReceiver.cpp  KosOtExtReceiver.cpp
lib/libOTe/libOTe_Tests/: CMakeLists.txt  OT_Tests.cpp  UnitTests.cpp
lib/openssl/: Configure
protocols/GMW/: GMWParty.cpp  GMWParty.h  NigelAes8Parties.txt  main.cpp
protocols/MaliciousYao/lib/: Makefile
protocols/MaliciousYao/lib/src/CommitmentWithZkProofOfDifference/: CmtWithDifferenceCommitter.cpp
protocols/SemiHonestYao/: CMakeLists.txt  YaoParties.cpp  YaoParties.hpp
src/cryptoInfra/: Protocol.cpp
src/infra/: Measurement.cpp
src/interactive_mid_protocols/: CommitmentSchemeElGamal.cpp  CommitmentSchemeElGamalHash.cpp  CommitmentSchemePedersen.cpp  CommitmentSchemePedersenHash.cpp  CommitmentSchemeSimpleHash.cpp  OTExtensionBristol.cpp  OTExtensionLibote.cpp  OTFullSimulation.cpp  OTFullSimulationROM.cpp  OTOneSidedSimulation.cpp  OTPrivacyOnly.cpp  OTSemiHonest.cpp  OTUC.cpp  ZeroKnowledge.cpp
src/primitives/: DlogOpenSSL.cpp  HashOpenSSL.cpp  Mersenne.cpp  PrfOpenSSL.cpp  Prg.cpp  TrapdoorPermutationOpenSSL.cpp
test/: makefile
